--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
+    "express": "^5.2.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PrithviDRajvanshi/blogify-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PrithviDRajvanshi/blogify-api/issues"
+  },
+  "homepage": "https://github.com/PrithviDRajvanshi/blogify-api#readme"
 }
